Ajout de la classe parente de test et SonarLint