@@ -7,44 +7,46 @@ import org.laurichapp.servicecommande.exceptions.ProduitPasDansPanierException;
 import org.laurichapp.servicecommande.models.paniers.Produit;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.mongodb.core.mapping.Document;
+import org.springframework.data.mongodb.core.mapping.Field;
 
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Document(collection = "paniers")
 public class Panier {
 
     @Id
-    private ObjectId _idPanier;
+    @Field("_id")
+    private ObjectId idPanier;
 
-    private Date date_creation = new Date(System.currentTimeMillis());
+    @Field("date_creation")
+    private Date dateCreation = new Date(System.currentTimeMillis());
     private String token;
 
     private List<Produit> produits = new ArrayList<>();
 
     public static PanierDTO toDTO(Panier panier) {
-        return new PanierDTO(panier.get_idPanier().toString(),
-                panier.getDate_creation(),
+        return new PanierDTO(panier.getIdPanier().toString(),
+                panier.getDateCreation(),
                 panier.getToken(),
-                panier.getProduits().stream().map(Produit::toProduitOutDTO).collect(Collectors.toList()));
+                panier.getProduits().stream().map(Produit::toProduitOutDTO).toList());
     }
 
-    public ObjectId get_idPanier() {
-        return _idPanier;
+    public ObjectId getIdPanier() {
+        return idPanier;
     }
 
-    public void set_idPanier(ObjectId _idPanier) {
-        this._idPanier = _idPanier;
+    public void setIdPanier(ObjectId idPanier) {
+        this.idPanier = idPanier;
     }
 
-    public Date getDate_creation() {
-        return date_creation;
+    public Date getDateCreation() {
+        return dateCreation;
     }
 
-    public void setDate_creation(Date date_creation) {
-        this.date_creation = date_creation;
+    public void setDateCreation(Date dateCreation) {
+        this.dateCreation = dateCreation;
     }
 
     public String getToken() {
@@ -65,7 +67,7 @@ public class Panier {
 
     public Produit getProduit(int idProduit, String couleur) throws ProduitPasDansPanierException {
         for (Produit p : this.produits) {
-            if (p.getId_produit_catalogue() == idProduit && p.getCouleur().getLibelle().equals(couleur)) {
+            if (p.getIdProduitCatalogue() == idProduit && p.getCouleur().getLibelle().equals(couleur)) {
                 return p;
             }
         }
